# django-querysetsequence

./: .coveragerc  .git-blame-ignore-revs  .gitignore  .readthedocs.yaml  .travis.yml  CHANGELOG.rst  LICENSE  README.rst  RELEASING.rst  gen_docs.py  multiqueryset.py  queryset_sequence.py  requirements.txt  run_coveralls.py  setup.cfg  setup.py  tox.ini
.github/workflows/: main.yml
docs/: api.rst  conf.py  example.rst  index.rst
queryset_sequence/: __init__.py  _inheritance.py  pagination.py
tests/: models.py  settings.py  test_inheritance.py  test_not_implemented.py  test_pagination.py  test_proxymodel.py  test_querysetsequence.py  test_querysetsequencemodel.py  test_simple.py  test_values.py  test_views.py
