[metadata]
name = django-querysetsequence
version = 0.15
description = Chain together multiple (disparate) QuerySets to treat them as a single QuerySet.
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Patrick Cloke
author_email = clokep@patrick.cloke.us
url = https://github.com/clokep/django-querysetsequence
download_url = https://github.com/clokep/django-querysetsequence
keywords = django, queryset, chain, multi, multiple, iterable
license = ISC
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Topic :: Software Development :: Libraries :: Python Modules
    Environment :: Web Environment
    Topic :: Internet
    Framework :: Django
    Framework :: Django :: 2.2
    Framework :: Django :: 3.1
    Framework :: Django :: 3.2
    Framework :: Django :: 4.0
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: ISC License (ISCL)

[options]
packages = find:
install_requires = django>=2.2
python_requires = >=3.6
