[metadata]
name = django-querysetsequence
version = 0.16
description = Chain together multiple (disparate) QuerySets to treat them as a single QuerySet.
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Patrick Cloke
author_email = clokep@patrick.cloke.us
url = https://github.com/clokep/django-querysetsequence
keywords = django, queryset, chain, multi, multiple, iterable
license = ISC
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Topic :: Software Development :: Libraries :: Python Modules
    Environment :: Web Environment
    Topic :: Internet
    Framework :: Django
    Framework :: Django :: 3.2
    Framework :: Django :: 4.0
    Framework :: Django :: 4.1
    Programming Language :: Python
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    License :: OSI Approved :: ISC License (ISCL)
project_urls =
    Documentation = https://django-querysetsequence.readthedocs.io
    Release notes = https://github.com/clokep/django-querysetsequence/blob/main/CHANGELOG.rst
    Source = https://github.com/clokep/django-querysetsequence
    Funding = https://github.com/sponsors/clokep
    Tracker = https://github.com/clokep/django-querysetsequence/issues

[options]
packages =
    queryset_sequence
install_requires = django>=3.2
python_requires = >=3.8

[flake8]
extend-ignore = E203
max-line-length = 88

[isort]
profile = black
default_section = THIRDPARTY
